# aws-dynamo-derive

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
aws-dynamo-derive/: Cargo.toml  README.md
aws-dynamo-derive/src/: container.rs  item.rs  lib.rs  table.rs
aws-dynamo-derive/src/dynamo/: attribute_definition.rs  key_schema.rs
aws-dynamo-derive/src/table/: parser.rs
aws-dynamo-derive/tests/: item.rs  main.rs  table.rs
dynamo-derive/: Cargo.toml  README.md
dynamo-derive/src/: ast.rs  container.rs  dynamo.rs  item.rs  lib.rs  table.rs  util.rs
dynamo-derive/src/ast/: ext_field.rs  literal_input.rs
dynamo-derive/src/dynamo/: attribute_definition.rs  attribute_value.rs  key_schema.rs  key_scheme.rs
dynamo-derive/src/table/: attr.rs  container.rs  parser.rs  tags.rs
dynamo-derive/tests/: item.rs  main.rs  table.rs
src/: item.rs  lib.rs  util.rs
tests/: item.rs  table.rs
