[package]
name = "aws-dynamo-derive"
version = "0.3.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffddw/aws-dynamo-derive"
description = """
Helper crate for aws-sdk-dynamodb.
"""
categories = ["api-bindings"]
keywords = ["dynamodb", "aws-sdk"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["extra-traits"] }

[dev-dependencies]
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1.44.0", features = ["behavior-version-latest"] }
test-context = "0.3.0"
tokio = { version = "1.40.0", features = ["macros"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
