[package]
name = "aws-dynamo-derive"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ffddw/aws-dynamo-derive"
description = """
Helper crate for aws-sdk-dynamodb.
"""
categories = ["api-bindings"]
keywords = ["dynamodb", "aws-sdk"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }

[dev-dependencies]
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
test-context = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
